--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,9 @@ qi_add_probes(tp_hello.in.h
     PROVIDER qi_probes_tests_hello
     INSTRUMENTED_FILES hello.cpp)
 qi_create_bin(hello NO_INSTALL
-    SRC hello.cpp tp_hello.h)
+    SRC
+    hello.cpp
+    ${CMAKE_CURRENT_BINARY_DIR}/tp_hello.h)
 
 if (WITH_PROBES)
     qi_use_lib(hello DL)
