--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,10 +11,11 @@ find_package(qiprobes)
 
 qi_add_probes(tp_hello.in.h
     PROVIDER qi_probes_tests_hello
-    INSTRUMENTED_FILES hello.cpp)
+    INSTRUMENTED_FILES hello.cpp hello_say.cpp)
 qi_create_bin(hello NO_INSTALL
     SRC
     hello.cpp
+    hello_say.cpp
     ${CMAKE_CURRENT_BINARY_DIR}/tp_hello.h)
 
 if (WITH_PROBES)
