add an example, use it in the doc, and paste doc from internal
The new example is distinct from the tests which were barely readable.
The example describes the current (legacy) cmake API.

Change-Id: If9b13d0e17f4bac33d6cb7b7e7c44e08cae5e1a6
Reviewed-on: http://gerrit.aldebaran.lan:8080/6208
Reviewed-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>
Tested-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory("qiprobes")
 # binary directories which serve as distinct namespaces.
 #
 # The script runtests.py allows to run them all.
+add_subdirectory("example")
 
 if(WITH_PROBES)
   set(QIPROBES_PROVIDER_BUILD_MODE "BUILTIN")
