add examplenew to code and doc
It is a clone of example, used to showcase document and test
the new API

We do not build it for now, since this new API is not implemented

Change-Id: I7227a7483a0ba51974db4e6dc54ee1356839978c
Reviewed-on: http://gerrit.aldebaran.lan:8080/6441
Reviewed-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>
Tested-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ project(qiprobes)
 find_package(qibuild)
 
 add_subdirectory("qiprobes")
+add_subdirectory("example")
+#add_subdirectory("examplenew")
 
 # tests.
 #
@@ -21,9 +23,7 @@ add_subdirectory("qiprobes")
 # The "tests" source directory is included several times with different
 # binary directories which serve as distinct namespaces.
 #
-# The script runtests.py allows to run them all.
-add_subdirectory("example")
-
+# The script runtests.py allows to run all the tests and the examples
 if(WITH_PROBES)
   set(QIPROBES_PROVIDER_BUILD_MODE "BUILTIN")
   add_subdirectory("tests" "tests-builtin")
