rename examplenew in example "tout court"
Change-Id: Ic16095d005dc2a8a2b807e704be5b468560d1413
Reviewed-on: http://gerrit.aldebaran.lan:8080/15381
Reviewed-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>
Tested-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ project(qiprobes)
 find_package(qibuild)
 
 add_subdirectory("qiprobes")
-add_subdirectory("examplenew")
+add_subdirectory("example")
 
 # tests.
 #
