libqiprobesctrl: make LTTng optional
redmine #22028

Change-Id: Iaa235e344c40b3a09899f63f9ed04996f2e296b9
Reviewed-on: http://gerrit.aldebaran.lan/39853
Reviewed-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>
Tested-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>

--- a/ctrl/CMakeLists.txt
+++ b/ctrl/CMakeLists.txt
@@ -16,7 +16,10 @@ if(WITH_PROBES)
   add_definitions(" -DWITH_PROBES")
 endif()
 qi_create_lib(qiprobesctrl STATIC ${H} ${C})
-qi_use_lib(qiprobesctrl QI BOOST BOOST_THREAD LTTNG_TOOLS)
+qi_use_lib(qiprobesctrl QI BOOST BOOST_THREAD)
+if(WITH_PROBES)
+  qi_use_lib(qiprobesctrl LTTNG_TOOLS)
+endif()
 qi_stage_lib(qiprobesctrl)
 
 add_subdirectory(tests)
