qiprobes: fix installation of cmake data files
Change-Id: I448788a9d6af425c022de10166f32bde4c7d56b6
Reviewed-on: http://gerrit.aldebaran.lan/53890
Reviewed-by: sbarthelemy <sbarthelemy@aldebaran-robotics.com>
Tested-by: dmerejkowsky <dmerejkowsky@aldebaran-robotics.com>

--- a/qiprobes/CMakeLists.txt
+++ b/qiprobes/CMakeLists.txt
@@ -11,7 +11,7 @@ function(qiprobes_stage_cmake_data module_name filename)
     ${QI_SDK_DIR}/${QI_SDK_CMAKE_MODULES}/${filename}
     COPYONLY)
   install(FILES "${filename}"
-    COMPONENT cmake
+    COMPONENT devel
     DESTINATION "${QI_SDK_CMAKE}/${module_name}"
   )
 endfunction()
